--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>top.saileach-bot</groupId>
     <artifactId>saileach-frame</artifactId>
-    <version>1.0</version>
+    <version>1.1-release</version>
 
     <name>SaileachFrame</name>
     <description>Saileach QQ Bot Frame By SpringBoot</description>
@@ -168,16 +168,20 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.36.0.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>xyz.cssxsh.mirai</groupId>
+            <artifactId>mirai-device-generator</artifactId>
+            <version>1.1.3</version>
+        </dependency>
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
-            <version>2.13.0-RC2</version>
+            <version>2.13.3</version>
         </dependency>
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-logging-slf4j-simple</artifactId>
-            <version>2.13.0-RC2</version>
+            <version>2.13.2</version>
         </dependency>
 
         <dependency>
